--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "maptalks": ">=0.39.0"
   },
   "dependencies": {
-    "geometry-extrude": "^0.1.2"
+    "geometry-extrude": "^0.1.2",
+    "rbush": "^3.0.1"
   }
 }
