--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "jsnext:main": "dist/maptalks.three.es.js",
   "scripts": {
     "dev": "rollup -w -c rollup.config.js",
-    "build": "rollup --environment BUILD:production -c rollup.config.js",
+    "build": "npm run lint && rollup --environment BUILD:production -c rollup.config.js",
     "build-dev": "rollup -c rollup.config.js",
     "preversion": "npm run lint",
     "version": "npm run build && git add -A dist",
