--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yy.maptalks.three",
+  "name": "deyihu-maptalks.three",
   "version": "0.20.2",
   "description": "A maptalks Layer to render with THREE.js.",
   "license": "MIT",
